--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section class="tab-content">
       <div class="container">
         <!-- Tab Content 1 -->
-        <!-- <div id="tab-1-content" class="tab-content-item show">
+        <div id="tab-1-content" class="tab-content-item show">
           <div class="tab-1-content-inner">
             <div>
               <p class="text-lg">
@@ -61,36 +61,55 @@
               src="https://i.ibb.co/J2xDJV7/tab-content-1.png"
               alt="No commitment"
             />
-          </div> -->
+          </div>
 
-        <!-- Tab Content 2 -->
-          <!-- <div id="tab-2-content" class="tab-content-item">
+          <!-- Tab Content 2 -->
+          <div id="tab-2-content" class="tab-content-item">
             <div class="tab-2-content-top">
-              <p class="text-lg">Watch TV shows and movies anytime, anywhere - personalized for you.</p>
+              <p class="text-lg">
+                Watch TV shows and movies anytime, anywhere - personalized for
+                you.
+              </p>
               <a href="#" class="btn btn-lg">Watch Free For 30 Days</a>
             </div>
             <div class="tab-2-content-bottom">
               <div>
-                <img src="https://i.ibb.co/DpdN7Gn/tab-content-2-1.png" alt="Watch on TV">
+                <img
+                  src="https://i.ibb.co/DpdN7Gn/tab-content-2-1.png"
+                  alt="Watch on TV"
+                />
                 <p class="text-md">Watch on your TV</p>
-                <p class="text-dark">Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
+                <p class="text-dark">
+                  Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray
+                  players and more.
+                </p>
               </div>
               <div>
-                <img src="https://i.ibb.co/R3r1SPX/tab-content-2-2.png" alt="Watch on tabley or phone">
+                <img
+                  src="https://i.ibb.co/R3r1SPX/tab-content-2-2.png"
+                  alt="Watch on tabley or phone"
+                />
                 <p class="text-md">Watch instantly or download for later</p>
-                <p class="text-dark">Available on phone and tablet, wherever you go</p>
+                <p class="text-dark">
+                  Available on phone and tablet, wherever you go
+                </p>
               </div>
               <div>
-                <img src="https://i.ibb.co/gDhnwWn/tab-content-2-3.png" alt="Watch on computer">
+                <img
+                  src="https://i.ibb.co/gDhnwWn/tab-content-2-3.png"
+                  alt="Watch on computer"
+                />
                 <p class="text-md">Use any computer</p>
                 <p class="text-dark">Watch right on Netflix.com</p>
               </div>
             </div>
-          </div> -->
-        <!-- Tab Content 3 -->
+          </div>
+          <!-- Tab Content 3 -->
           <div id="tab-3-content" class="tab-content-item">
             <div class="tab-3-content-top text-center">
-              <p class="text-lg">Choose one plan and watch everything on Netflix</p>
+              <p class="text-lg">
+                Choose one plan and watch everything on Netflix
+              </p>
               <a href="#" class="btn btn-ld">Watch Free For 30 Days</a>
             </div>
 
@@ -163,30 +182,30 @@
       <p>Questions? Call 1-866-579-7172</p>
       <div class="footer-cols">
         <ul>
-					<li><a href="#">FAQ</a></li>
-					<li><a href="#">Investor Relations</a></li>
-					<li><a href="#">Ways To Watch</a></li>
-					<li><a href="#">Corporate Information</a></li>
-					<li><a href="#">Netflix Originals</a></li>
-				</ul>
-				<ul>
-					<li><a href="#">Help Center</a></li>
-					<li><a href="#">Jobs</a></li>
-					<li><a href="#">Terms Of Use</a></li>
-					<li><a href="#">Contact Us</a></li>
-				</ul>
-				<ul>
-					<li><a href="#">Account</a></li>
-					<li><a href="#">Redeem Gift Cards</a></li>
-					<li><a href="#">Privacy</a></li>
-					<li><a href="#">Speed Test</a></li>
-				</ul>
-				<ul>
-					<li><a href="#">Media Center</a></li>
-					<li><a href="#">Buy Gift Cards</a></li>
-					<li><a href="#">Cookie Preferences</a></li>
-					<li><a href="#">Legal Notices</a></li>
-				</ul>
+          <li><a href="#">FAQ</a></li>
+          <li><a href="#">Investor Relations</a></li>
+          <li><a href="#">Ways To Watch</a></li>
+          <li><a href="#">Corporate Information</a></li>
+          <li><a href="#">Netflix Originals</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">Help Center</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Terms Of Use</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">Account</a></li>
+          <li><a href="#">Redeem Gift Cards</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Speed Test</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">Media Center</a></li>
+          <li><a href="#">Buy Gift Cards</a></li>
+          <li><a href="#">Cookie Preferences</a></li>
+          <li><a href="#">Legal Notices</a></li>
+        </ul>
       </div>
     </footer>
   </body>
